# GPU-programming

./: .clangd  .gitignore  CMakeLists.txt  profile_report.ncu-rep  test  test.cu
hw1/: main.cpp
hw2/: main.cpp
lab1/: CMakeLists.txt  generate_tests.py  main.cpp  main.cu  plot_heatmap.py
lab2/: CMakeLists.txt  cleanup_test_files.sh  main.cu  main_cpu.cpp  out.py  run.sh  run_benchmark.sh  visualize_performance.py
lab3/: in.py  main.cpp  main.cu  test.py  ЛР 3.docx
lab4/: lab4  main.cu  test.py
lab5/: main.cu  test.py
